--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<html><head><title>Phaser3 + Parceljs Template</title></head><body> <script src="/main.e0415d16.js"></script> </body></html>
+<html>
+
+<head>
+  <title>Phaser3 + Parceljs Template</title>
+</head>
+
+<body>
+  <script src="main.e0415d16.js"></script>
+</body>
+
+</html>
